redo data selection

--- a/voting_data.Rmd
+++ b/voting_data.Rmd
@@ -81,10 +81,11 @@ prop_ids <- proposal_df$data.proposals.id  # get list of proposal IDs
 # store all the votes from every proposal in a big list
 votes_list <- list() # DF to store all the votes gathered
 for(i in 1:length(prop_ids)) {
-  votes <- getVotes(vote_query, 1000, prop_ids[i])
+  votes <- getVotes(vote_query, 100000, prop_ids[i])
   votes_list[[i]] <- votes
 }
 ```
+
 
 ```{r processdata}
 # use only elements with single-choice voting (causes problems with dplyr::bind_row() and don't know how to process later anyways)
@@ -109,6 +110,39 @@ votes_df <- votes_df %>%
          Time.Created = data.votes.created,
          Choice = data.votes.choice)
 
+# filter down to 20 most recent votes without near-consensus (<99% agreement)
+# label votes by the total votes in the prop, number of votes w that choice, and proportion of votes with that choice
+votes_df <- votes_df %>%
+  group_by(Proposal.ID) %>%
+  mutate(Tot.Votes = sum(Weight)) %>%
+  group_by(Proposal.ID, Choice) %>%
+  mutate(N.Votes = sum(Weight)) %>%
+  mutate(Prop.Votes = N.Votes/Tot.Votes) %>%
+  ungroup()
+
+# check maximum proportion and filter out ones with too much agreement
+votes_df <- votes_df %>%
+  group_by(Proposal.ID) %>%
+  mutate(Max.Prop = max(Prop.Votes)) %>%
+  filter(Max.Prop < 0.99)
+
+# get 20 most recent proposals' start times
+props_df <- votes_df %>%
+  mutate(Time.Started = min(Time.Created)) %>%
+  summarise(Time.Started = unique(Time.Started)) %>%
+  arrange(-Time.Started) %>%
+  head(20)
+
+# earliest vote in the 20th-oldest proposal
+min_age <- min(props_df$Time.Started)
+
+# filter out votes that happened earlier than this
+votes_df %>%
+  filter(Time.Created >= min_age)
+```
+
+
+```{r processdata}
 # write csv
 write.csv(votes_df, "votes.csv", row.names = FALSE)
 ```
